--- a/_talks/2022-10-17-talk-1.md
+++ b/_talks/2022-10-17-talk-1.md
@@ -7,3 +7,10 @@ venue: "Soceity of Engineering Science Annual Technical Meeting"
 date: 2022-10-17
 location: "Texas A\&M University, College Station, Texas"
 ---
+title: "Mechanics and microstructure underlying axonal deformation of neurons and neuronal injury"
+collection: talks
+type: "Conference Talk"
+permalink: /talks/2022-10-17-talk-1
+venue: "Soceity of Engineering Science Annual Technical Meeting"
+date: 2022-10-17
+location: "Texas A\&M University, College Station, Texas"
